--- a/views/img-gallery.html
+++ b/views/img-gallery.html
@@ -6,52 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>  
-    <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <h1>PHOTO GALLERY</h1>
+<body>
+    <div id="gallery">
+        <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1>GALLERY</h1>
+                    </div>
                 </div>
-            </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/images/alien.jpg" alt="" width="100%">
-                <p>Alien</p>
-            </div>
-            <div class="col-sm-4">
-                <img src="/images/assassin.jpg" alt="" width="100%">
-                <p>Assassin</p>
-            </div>
-            <div class="col-sm-4">
-                <img src="/images/baqueros.jpg" alt="" width="100%">
-                <p>baqueros</p>
-            </div>
         </div>
-    </div>
-    <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="/images/prometeus.jpg" alt="" width="100%">
-                    <p>Prometheus</p>       
+                    <img src="/images/pulp-fiction.jpg" alt="" width="100%">
+                    <p>Pulp Fiction</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="/images/300.jpg" alt="" width="100%">
-                    <p>Steve Jobs</p>
+                    <img src="/images/schindler-list.jpg" alt="" width="100%">
+                    <p>Schindler's list</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="/images/steve-jobs.jpeg" alt="" width="100%">
-                    <p>Hunger</p>
+                    <img src="/images/judgment-at-nuremberg.jpg" alt="" width="100%">
+                    <p>Judgment at Nuremberg</p>
                 </div>
             </div>
         </div>
-
-     <dir id="link">
-        <a href="/about">Go to the gallery</a> <br>
-        <a href="/">Back to Home</a>
-    </dir>
+    
+        <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <img src="/images/alien.jpg" alt="" width="100%">
+                        <p>Alien</p>       
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/forrest-gump.jpg" alt="" width="100%">
+                        <p>Forrest Gump</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/truman-show.jpg" alt="" width="100%">
+                        <p>The Truman show</p>
+                    </div>
+                </div>
+            </div>
+            <a href="/">Back to Home</a>
+            <a href="/ranking">Go to Ranking</a> 
+        </div>
+    </div> 
+    
+          
+    
 </body>
 </html>
