--- a/public/style/style.css
+++ b/public/style/style.css
@@ -11,32 +11,84 @@ html {
   body {
     margin: 0;
     padding: 0;
-    background-color: rgb(183, 201, 229);
+    font-family: 'Shadows Into Light', cursive;
   }
   
+  /* ---- typography ---- */
 
-.image {
-    width: 800px;
-    height: 500px;
-    display: block;
-    margin: auto;
-    padding-bottom: 20px;
-}
 
 h1 {
+    font-size: 7em;
     text-align: center;
+    margin: 4%;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 3em;
+    padding-left: 5%;
 }
 
 p {
     text-align: center;
     font-size: 1.5em;
-}
-
-#link {
-    text-align: center;
-    display: grid;
+    margin-bottom: 4%;
 }
 
 a {
-    font-size: 1.2em;
+    font-size: 2em;
+    text-decoration: none;
+    font-weight: bold;
+    margin: auto 10%;
 }
+
+img {
+    margin-bottom: 5%;
+}
+
+
+/* ---- ids ---- */
+
+
+
+#main {
+    background-color: rgb(239, 244, 247);
+    margin: auto 15%;
+    display: flex;
+    justify-content: center;  
+}
+
+#gallery {
+    margin: auto 12%;
+    background-color: rgb(239, 244, 247);
+}
+
+
+
+
+/* ---- classes ---- */
+
+
+
+
+
+.main-container {
+    justify-content: center;
+}
+
+
+.images {
+
+    padding-bottom: 5%;
+}
+
+
+/* 
+.img-ranking {
+    width: 500px;
+    height: 400px;
+} */
+
+
+
+
