--- a/views/home-page.html
+++ b/views/home-page.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>MICHAEL FASSBENDER</h1>
-    
-    <img class ="image" src="/images/michael-fassbender.jpg"/>
-    <p>One of the best actors ever!</p>
-    <div id="link">
-        <a href="/about">See Michael's biography</a>
-        <a href="/gallery">Go to the gallery</a>
-    </div>
+    <div id="main">
+        <div class="main-container">
+            <h1>PELICULONES</h1>   
+            <img class ="image" src="/images/terminator.jpg"/>
+            <p>Best films ever! you can find them pressing these links!</p>
+            <a href="/gallery" >Go to Gallery</a>          
+            <a href="/ranking" >Go to Ranking</a>                      
+        </div>
+    </div>        
 </body>
 </html>
